# husky_simulation

./: README.md
husky_navigation/: CMakeLists.txt  package.xml
husky_navigation/config/: map_saver_params.yaml  mapper_params_online_async.yaml  nav2_params_husky.yaml
husky_navigation/launch/: cartographer.launch.py  husky_navigation.launch.py  husky_simulation.launch.py  map_saver.launch.py  online_async_launch.py
husky_navigation/maps/: greenhouse_map.yaml  my_map.yaml
husky_navigation/rviz/: nav2_config.rviz  urdf_config.rviz
husky_simulation/: CMakeLists.txt  package.xml
husky_simulation/launch/: hasky_gazebo.launch.py  husky_gazebo.launch.py
husky_simulation/meshes/: large_top_plate.stl  os0_32.stl
husky_simulation/models/husky/: husky.sdf
husky_simulation/models/husky/meshes/: Soporte_mastil.dae  Structure.stl  base_link_logo.dae  mastil.stl
husky_simulation/rviz/: test.rviz
husky_simulation/urdf/: husky.gazebo  husky.sdf  husky_ual.urdf.xacro
